arm_cfn/KogenceARM_0830/KogenceARM/KogenceARM/nestedtemplates/nest-net-security.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "masterSecurityGroup": {
      "type": "string",
      "metadata": {
        "description": "The Azure Network Security Group Name"
      }
    }
  },
  "variables": {
    "ingress_rule_ssh": "ingress_rule_ssh",
    "ingress_rule_http": "ingress_rule_http",
    "ingress_rule_https": "ingress_rule_https",
    "ingress_rule_rdp": "ingress_rule_rdp"
  },
  "resources": [
    {
      "name": "[parameters('masterSecurityGroup')]",
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "[variables('ingress_rule_ssh')]",
            "properties": {
              "provisioningState": "Succeeded",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "[variables('ingress_rule_http')]",
            "properties": {
              "provisioningState": "Succeeded",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 301,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "[variables('ingress_rule_https')]",
            "properties": {
              "provisioningState": "Succeeded",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 302,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "[variables('ingress_rule_rdp')]",
            "properties": {
              "provisioningState": "Succeeded",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 303,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    }
  ],
  "outputs": {}
}
